--- a/data/cards/89943723.yaml
+++ b/data/cards/89943723.yaml
@@ -337,7 +337,7 @@ sets:
   - set_number: CCC1-JP002
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
     rarities:
-    - UPR
+    - Normal Parallel Rare
   ko:
   - set_number: POTD-KR001
     set_name: Power of the Duelist
