--- a/data/rush/15150.yaml
+++ b/data/rush/15150.yaml
@@ -119,6 +119,10 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Over Rush Rare
+  - set_number: RD/CCC1-JP001
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/ST01-KR001
     set_name: Starter Deck Yuga - Cut Through! Sevens Road!!
