--- a/data/rush/16968.yaml
+++ b/data/rush/16968.yaml
@@ -41,6 +41,11 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Rare
+  - set_number: RD/B231-JP002
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP07-KR002
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
