--- a/data/rush/17505.yaml
+++ b/data/rush/17505.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: Yu-Gi-Oh! GO RUSH!! Complete Challenge 2
     rarities:
     - Rush Rare
+  - set_number: RD/CCC1-JP005
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/KP09-KR019
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
