--- a/data/rush/17865.yaml
+++ b/data/rush/17865.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: Yu-Gi-Oh! GO RUSH!! x 7-Eleven Collaboration Campaign
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/CCC1-JP006
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/KP10-KR017
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
