--- a/data/rush/18366.yaml
+++ b/data/rush/18366.yaml
@@ -71,6 +71,11 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
+  - set_number: RD/B231-JP003
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/ORP1-KR037
     set_name: Over Rush Pack
