--- a/data/rush/18618.yaml
+++ b/data/rush/18618.yaml
@@ -68,4 +68,9 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Common
+  - set_number: RD/B231-JP005
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 716842
