--- a/data/cards/05043010.yaml
+++ b/data/cards/05043010.yaml
@@ -195,7 +195,7 @@ sets:
   - set_number: CCC1-JP006
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
     rarities:
-    - UPR
+    - Normal Parallel Rare
   ko:
   - set_number: COTD-KR043
     set_name: Code of the Duelist
