--- a/data/cards/16178681.yaml
+++ b/data/cards/16178681.yaml
@@ -296,7 +296,7 @@ sets:
   - set_number: CCC1-JP005
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
     rarities:
-    - UPR
+    - Normal Parallel Rare
   ko:
   - set_number: DUEA-KR004
     set_name: Duelist Alliance
