--- a/data/cards/44508094.yaml
+++ b/data/cards/44508094.yaml
@@ -357,10 +357,10 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Prismatic Secret Rare
-  - set_number: CCC1-JP004
+  - set_number: CCC1-JP003
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
     rarities:
-    - UPR
+    - Normal Parallel Rare
   ko:
   - set_number: TDGS-KR040
     set_name: The Duelist Genesis
