--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -1072,7 +1072,7 @@ sets:
   - set_number: CCC1-JP001
     set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
     rarities:
-    - UPR
+    - Normal Parallel Rare
   ko:
   - set_number: LOB-K005
     set_name: Legend of Blue Eyes White Dragon
