--- a/data/rush/15164.yaml
+++ b/data/rush/15164.yaml
@@ -104,6 +104,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Over Rush Rare
+  - set_number: RD/CCC1-JP002
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/ST02-KR001
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
