--- a/data/rush/16934.yaml
+++ b/data/rush/16934.yaml
@@ -66,6 +66,12 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/B231-JP001
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
+    - Ultra Rare
   ko:
   - set_number: RD/EXT1-KR050
     set_name: Extra Transcend Enhancement Pack
