--- a/data/rush/17488.yaml
+++ b/data/rush/17488.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Secret Ace Pack 2022 Vol.4
     rarities:
     - Secret Rare
+  - set_number: RD/CCC1-JP004
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/KP09-KR002
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
