--- a/data/rush/18621.yaml
+++ b/data/rush/18621.yaml
@@ -70,4 +70,9 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
+  - set_number: RD/B231-JP004
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 712691
