--- a/rush.yaml
+++ b/rush.yaml
@@ -120,6 +120,10 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Over Rush Rare
+  - set_number: RD/CCC1-JP001
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/ST01-KR001
     set_name: Starter Deck Yuga - Cut Through! Sevens Road!!
@@ -1136,6 +1140,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Over Rush Rare
+  - set_number: RD/CCC1-JP002
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/ST02-KR001
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
@@ -3071,6 +3079,10 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/CCC1-JP003
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 1
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/KP01-KR028
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
@@ -45825,6 +45837,12 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/B231-JP001
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
+    - Ultra Rare
   ko:
   - set_number: RD/EXT1-KR050
     set_name: Extra Transcend Enhancement Pack
@@ -46711,6 +46729,11 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Rare
+  - set_number: RD/B231-JP002
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP07-KR002
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
@@ -58389,6 +58412,10 @@ sets:
     set_name: Secret Ace Pack 2022 Vol.4
     rarities:
     - Secret Rare
+  - set_number: RD/CCC1-JP004
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/KP09-KR002
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -59418,6 +59445,10 @@ sets:
     set_name: Yu-Gi-Oh! GO RUSH!! Complete Challenge 2
     rarities:
     - Rush Rare
+  - set_number: RD/CCC1-JP005
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: RD/KP09-KR019
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -70429,6 +70460,10 @@ sets:
     - Rush Rare
   - set_number: RD/711B-JP004
     set_name: Yu-Gi-Oh! GO RUSH!! x 7-Eleven Collaboration Campaign
+    rarities:
+    - Normal Parallel Rare
+  - set_number: RD/CCC1-JP006
+    set_name: Coco's x Yu-Gi-Oh! Card Game Anniversary Campaign 2
     rarities:
     - Normal Parallel Rare
   ko:
@@ -84208,6 +84243,11 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
+  - set_number: RD/B231-JP003
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/ORP1-KR037
     set_name: Over Rush Pack
@@ -89347,6 +89387,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Common
+  - set_number: RD/B231-JP005
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 716842
 ---
 konami_id: 18619
@@ -89568,6 +89613,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
+  - set_number: RD/B231-JP004
+    set_name: Battle Pack 2023 Vol.1
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 712691
 ---
 konami_id: 18622
