--- a/data/rush/17328.yaml
+++ b/data/rush/17328.yaml
@@ -1,6 +1,6 @@
 konami_id: 17328
 name:
-  en: Enraged Scale Liberation
+  en: Release Wrath
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Chameleon
 images:
 - index: 1
-  image: EnragedScaleLiberation-RDKP08-JP-SR.png
+  image: ReleaseWrath-RDKP08-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP08-JP051
