--- a/data/rush/17507.yaml
+++ b/data/rush/17507.yaml
@@ -1,6 +1,6 @@
 konami_id: 17507
 name:
-  en: Wording Fairy
+  en: Poet Fairy
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 600
 def: 0
 images:
 - index: 1
-  image: WordingFairy-RDKP09-JP-UR.png
+  image: PoetFairy-RDKP09-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP09-JP021
