--- a/rush.yaml
+++ b/rush.yaml
@@ -59533,7 +59533,7 @@ yugipedia_page_id: 714855
 ---
 konami_id: 17507
 name:
-  en: Wording Fairy
+  en: Poet Fairy
   de:
   es:
   fr:
@@ -59581,7 +59581,7 @@ atk: 600
 def: 0
 images:
 - index: 1
-  image: WordingFairy-RDKP09-JP-UR.png
+  image: PoetFairy-RDKP09-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP09-JP021
