--- a/data/cards/14812471.yaml
+++ b/data/cards/14812471.yaml
@@ -8,7 +8,7 @@ name:
   it: Salamagna Lincepira
   pt: Salamagrande Lincegueira
   ja: <ruby>転生炎獣<rt>サラマングレイト</rt></ruby>ベイルリンクス
-  ja_romaji: Saramangureito Beirurinkusu
+  ja_romaji: Saramangureito Beiru Rinkusu
   ko: 샐러맨그레이트 베일링크스
   ko_rr: Saelleomaen-geureiteu Beillingkeuseu
   zh-TW:
