--- a/data/cards/44519536.yaml
+++ b/data/cards/44519536.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: LeftLegoftheForbiddenOne-LART-EN-UR-LE.png
-  illustration: LeftLegoftheForbiddenOne-TF04-JP-VG.jpg
+  illustration: LeftLegoftheForbiddenOne-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: LeftLegoftheForbiddenOne-LOB-EN-UR-UE-25thAnniversaryEdition.png
-  illustration: LeftLegoftheForbiddenOne-TF04-EN-VG.jpg
+  illustration: LeftLegoftheForbiddenOne-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB1-EN136
@@ -307,6 +307,10 @@ sets:
     set_name: World Premiere Pack 2022
     rarities:
     - Prismatic Secret Rare
+  - set_number: ''
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: LOB-K121
     set_name: Legend of Blue Eyes White Dragon
