--- a/data/cards/46898368.yaml
+++ b/data/cards/46898368.yaml
@@ -97,6 +97,10 @@ sets:
     set_name: Eternity Code
     rarities:
     - Common
+  - set_number: DP28-JP016
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
+    - Common
   ko:
   - set_number: ETCO-KR057
     set_name: Eternity Code
