--- a/data/cards/54529134.yaml
+++ b/data/cards/54529134.yaml
@@ -91,6 +91,10 @@ sets:
     set_name: Chaos Impact
     rarities:
     - Rare
+  - set_number: DP28-JP015
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
+    - Common
   ko:
   - set_number: CHIM-KR052
     set_name: Chaos Impact
