--- a/data/cards/19808608.yaml
+++ b/data/cards/19808608.yaml
@@ -43,7 +43,7 @@ series:
 - D/D
 images:
 - index: 1
-  image: DDBerfomet-MP16-EN-R-1E.png
+  image: DDBerfomet-OP19-EN-SR-UE.png
 sets:
   en:
   - set_number: DOCS-EN010
