--- a/data/cards/59627393.yaml
+++ b/data/cards/59627393.yaml
@@ -114,6 +114,10 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: DP28-JP042
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
+    - Common
   ko:
   - set_number: LTGY-KR051
     set_name: Lord of the Tachyon Galaxy
