--- a/data/cards/85121942.yaml
+++ b/data/cards/85121942.yaml
@@ -129,6 +129,10 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: DP28-JP043
+    set_name: 'Duelist Pack: Duelists of Explosion'
+    rarities:
+    - Common
   ko:
   - set_number: LTGY-KR052
     set_name: Lord of the Tachyon Galaxy
