--- a/data/cards/19847532.yaml
+++ b/data/cards/19847532.yaml
@@ -8,7 +8,7 @@ name:
   it: Imperatore della Fiamma Infernale
   pt: Imperador da Chama Infernal
   ja: ヘルフレイムエンペラー
-  ja_romaji: Heru Fureimu Enperā
+  ja_romaji: Herufureimu Enperā
   ko: 헬프레임 엠페러
   ko_rr:
   zh-TW:
