--- a/data/cards/38572779.yaml
+++ b/data/cards/38572779.yaml
@@ -162,6 +162,10 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: 23YJ-JPT01
+    set_name: Transcendosaurus Duel Set
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RATE-KR028
     set_name: Raging Tempest
