--- a/data/cards/72233469.yaml
+++ b/data/cards/72233469.yaml
@@ -43,6 +43,10 @@ sets:
     - Common
     - Super Rare
     - Secret Rare
+  - set_number: 23YJ-JPT02
+    set_name: Evil★Twin Duel Set
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: SLF1-KR100
     set_name: Selection 5
