--- a/data/cards/67169062.yaml
+++ b/data/cards/67169062.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Escolha 5 monstros no seu Cemitério; embaralhe todos os 5 no Deck e, depois, compre 2 cards.
   ja: |-
-    ①：自分の墓地のモンスター５体を対象として発動できる。そのモンスター５体をデッキに戻してシャッフルする。その後、自分はデッキから２枚ドローする。
+    ①：自分の墓地のモンスター５体を対象として発動できる。そのモンスター５体をデッキに戻してシャッフルする。その後、自分は２枚ドローする。
   ko: |-
     ①: 자신 묘지의 몬스터 5장을 대상으로 하고 발동할 수 있다. 그 몬스터 5장을 덱에 넣고 셔플한다. 그 후, 자신은 덱에서 2장 드로우한다.
   zh-TW: |-
