--- a/data/cards/87871125.yaml
+++ b/data/cards/87871125.yaml
@@ -151,6 +151,7 @@ sets:
   - set_number: DP28-JP012
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: SAST-KR048
     set_name: Savage Strike
