--- a/data/cards/33396948.yaml
+++ b/data/cards/33396948.yaml
@@ -100,6 +100,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   - set_number: LOB-124
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -177,6 +181,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: LDD-F101
     set_name: Legend of Blue Eyes White Dragon
@@ -222,6 +230,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: LDD-I101
     set_name: Legend of Blue Eyes White Dragon
@@ -267,6 +279,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: LDB-P124
     set_name: Legend of Blue Eyes White Dragon
@@ -300,6 +316,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: ''
     set_name: Premium Pack (Japanese)
