--- a/data/cards/93717133.yaml
+++ b/data/cards/93717133.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: ????-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   de:
   - set_number: CT08-DE003
     set_name: Collectible Tins 2011 Wave 2
@@ -108,6 +112,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: ????-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: CT08-FR003
     set_name: Collectible Tins 2011 Wave 2
@@ -136,6 +144,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: ????-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: CT08-IT003
     set_name: Collectible Tins 2011 Wave 2
@@ -164,6 +176,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: ????-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: SP13-PT008
     set_name: Star Pack 2013
@@ -182,6 +198,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: ????-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHSW-JP011
     set_name: Photon Shockwave
