--- a/data/cards/01861629.yaml
+++ b/data/cards/01861629.yaml
@@ -86,6 +86,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: ????-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   de:
   - set_number: YS17-DE041
     set_name: 'Starter Deck: Link Strike'
@@ -111,6 +115,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: ????-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: YS17-FR041
     set_name: 'Starter Deck: Link Strike'
@@ -136,6 +144,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: ????-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: YS17-IT041
     set_name: 'Starter Deck: Link Strike'
@@ -161,6 +173,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: ????-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: YS17-PT041
     set_name: 'Starter Deck: Link Strike'
@@ -186,6 +202,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: ????-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: ST17-JP041
     set_name: Starter Deck 2017
