--- a/data/cards/09608555.yaml
+++ b/data/cards/09608555.yaml
@@ -59,26 +59,46 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: ????-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   de:
   - set_number: GFP2-DE025
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: ????-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: GFP2-FR025
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: ????-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: GFP2-IT025
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: ????-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: GFP2-PT025
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ultra Rare
+  - set_number: ????-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: LVDS-JPA03
     set_name: LINK VRAINS Duelist Set
