--- a/data/cards/16178681.yaml
+++ b/data/cards/16178681.yaml
@@ -110,6 +110,10 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: ????-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   de:
   - set_number: DUEA-DE004
     set_name: Duelist Alliance
@@ -145,6 +149,10 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: ????-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: DUEA-FR004
     set_name: Duelist Alliance
@@ -180,6 +188,10 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: ????-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: DUEA-IT004
     set_name: Duelist Alliance
@@ -215,6 +227,10 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: ????-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: DUEA-PT004
     set_name: Duelist Alliance
@@ -250,6 +266,10 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: ????-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUEA-JP004
     set_name: Duelist Alliance
