--- a/data/cards/44508094.yaml
+++ b/data/cards/44508094.yaml
@@ -115,6 +115,10 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Starlight Rare
+  - set_number: ????-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   de:
   - set_number: CT05-DE001
     set_name: Collectible Tins 2008 Wave 1
@@ -172,6 +176,10 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Starlight Rare
+  - set_number: ????-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: CT05-FR001
     set_name: Collectible Tins 2008 Wave 1
@@ -225,6 +233,10 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Starlight Rare
+  - set_number: ????-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: CT05-IT001
     set_name: Collectible Tins 2008 Wave 1
@@ -278,6 +290,10 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Starlight Rare
+  - set_number: ????-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: SHSP-PTSE1
     set_name: 'Shadow Specters: Special Edition'
@@ -305,6 +321,10 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Starlight Rare
+  - set_number: ????-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: TDGS-JP040
     set_name: The Duelist Genesis
