--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -232,6 +232,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   - set_number: LOB-005
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -480,6 +484,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: DDY-F005
     set_name: 'Starter Deck: Yugi'
@@ -632,6 +640,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: MIY-I005
     set_name: 'Starter Deck: Yugi'
@@ -788,6 +800,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: DIY-P006
     set_name: 'Starter Deck: Yugi'
@@ -907,6 +923,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: ''
     set_name: Vol.1
