--- a/data/cards/59123194.yaml
+++ b/data/cards/59123194.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: ????-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   de:
   - set_number: BOSH-DE047
     set_name: Breakers of Shadow
@@ -71,6 +75,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: ????-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: BOSH-FR047
     set_name: Breakers of Shadow
@@ -80,6 +88,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: ????-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: BOSH-IT047
     set_name: Breakers of Shadow
@@ -89,6 +101,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: ????-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: BOSH-PT047
     set_name: Breakers of Shadow
@@ -98,6 +114,10 @@ sets:
     set_name: Pendulum Evolution
     rarities:
     - Super Rare
+  - set_number: ????-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: BOSH-JP047
     set_name: Breakers of Shadow
