--- a/data/cards/70095154.yaml
+++ b/data/cards/70095154.yaml
@@ -165,6 +165,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: ????-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   - set_number: MF03-EN009
     set_name: 'Mattel Action Figure promotional cards: Series 3'
     rarities:
@@ -311,6 +315,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: ????-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: CRV-FR015
     set_name: Cybernetic Revolution
@@ -421,6 +429,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: ????-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: CRV-IT015
     set_name: Cybernetic Revolution
@@ -539,6 +551,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: ????-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: CRV-PT015
     set_name: Cybernetic Revolution
@@ -616,6 +632,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: ????-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: CRV-JP015
     set_name: Cybernetic Revolution
