--- a/data/cards/74677422.yaml
+++ b/data/cards/74677422.yaml
@@ -177,6 +177,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   - set_number: LOB-070
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -340,6 +344,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: LDD-F056
     set_name: Legend of Blue Eyes White Dragon
@@ -439,6 +447,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: LDD-I056
     set_name: Legend of Blue Eyes White Dragon
@@ -542,6 +554,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: LDB-P070
     set_name: Legend of Blue Eyes White Dragon
@@ -624,6 +640,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: ???-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: ''
     set_name: Vol.3
