--- a/data/cards/84013237.yaml
+++ b/data/cards/84013237.yaml
@@ -119,6 +119,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: ????-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   - set_number: DT07-EN034
     set_name: Duel Terminal 7a
     rarities:
@@ -179,6 +183,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: ????-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: YS11-FR041
     set_name: 'Starter Deck: Dawn of the Xyz'
@@ -231,6 +239,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: ????-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: YS11-IT041
     set_name: 'Starter Deck: Dawn of the Xyz'
@@ -283,6 +295,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: ????-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: SP13-PT021
     set_name: Star Pack 2013
@@ -314,6 +330,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Ultra Rare
+  - set_number: ????-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: YSD6-JP041
     set_name: Starter Deck 2011
