--- a/data/cards/89943723.yaml
+++ b/data/cards/89943723.yaml
@@ -103,6 +103,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: ????-EN???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   - set_number: DTP1-EN005
     set_name: Duel Terminal - Preview Wave 1
     rarities:
@@ -165,6 +169,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: ????-DE???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: POTD-FR001
     set_name: Power of the Duelist
@@ -211,6 +219,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: ????-FR???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: POTD-IT001
     set_name: Power of the Duelist
@@ -261,6 +273,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: ????-IT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: SDHS-PT007
     set_name: HERO Strike Structure Deck
@@ -287,6 +303,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: ????-PT???
+    set_name: '25th Anniversary Tin: Dueling Heroes'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: WJC-JP005
     set_name: Weekly Shōnen Jump 2006, Issue 2 promotional card
