--- a/data/cards/yugipedia934343.yaml
+++ b/data/cards/yugipedia934343.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you have 2 or more "Salamangreat" monsters in your GY: You can Special Summon this card from your hand. If a "Salamangreat" Ritual, Fusion, Synchro, Xyz, and/or Link Monster(s) is Special Summoned to your field while this card is in your GY: You can target 1 other "Salamangreat" monster in your GY; place this card on the bottom of the Deck, and if you do, Special Summon that monster to your opponent's field, then draw 1 card. You can only use each effect of "Salamangreat Wheesel" once per turn.
+    If you have 2 or more "Salamangreat" monsters in your GY: You can Special Summon this card from your hand. If a "Salamangreat" Ritual, Fusion, Synchro, Xyz, and/or Link Monster(s) is Special Summoned to your field while this card is in your GY (except during the Damage Step): You can target 1 other "Salamangreat" monster in your GY; place this card on the bottom of the Deck, and if you do, Special Summon that monster to your opponent's field, then draw 1 card. You can only use each effect of "Salamangreat Wheesel" once per turn.
   de:
   es:
   fr:
