--- a/data/cards/10140443.yaml
+++ b/data/cards/10140443.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18911
+password: 10140443
 name:
   en: Salamangreat Burst Gryphon
   de:
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    チューナー＋チューナー以外のモンスター１体以上
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地のレベル７以下の炎属性モンスター１体を対象として発動できる。そのモンスターを特殊召喚し、そのモンスターの元々のレベル分だけこのカードのレベルを下げる。このターン、自分は炎属性モンスターしか特殊召喚できない。②：このカードが「転生炎獣バースト・グリフォン」を素材としてＳ召喚した場合に発動できる。次のスタンバイフェイズに自分の墓地からモンスター１体を特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -37,15 +39,15 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatBurstGryphon-DP28-JP-OP.png
+  image: SalamangreatBurstGryphon-DP28-JP-SR.png
 sets:
   ja:
   - set_number: DP28-JP004
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 934313
-fake_password:
-- 100299004
