--- a/data/cards/22411609.yaml
+++ b/data/cards/22411609.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18916
+password: 22411609
 name:
   en: Volcanic Trooper
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。デッキから「ヴォルカニック・トルーパー」以外の「ヴォルカニック」カード１枚を手札に加える。②：手札を１枚捨てて発動できる。相手フィールドに「ボムトークン」（炎族・炎・星１・攻／守１０００）１体を特殊召喚する。このトークンが破壊された時にそのコントローラーは５００ダメージを受ける。
   ko:
   zh-TW:
   zh-CN:
@@ -35,15 +36,15 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicTrooper-DP28-JP-OP.png
+  image: VolcanicTrooper-DP28-JP-SR.png
 sets:
   ja:
   - set_number: DP28-JP019
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 924867
-fake_password:
-- 100299019
