--- a/data/cards/46412900.yaml
+++ b/data/cards/46412900.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18915
+password: 46412900
 name:
   en: Volcanic Emperor
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードは通常召喚できない。自分のフィールド（表側表示）・墓地から炎族モンスター３体か「ブレイズ・キャノン」カード１枚を除外した場合のみ手札・墓地から特殊召喚できる。自分は「ヴォルカニック・エンペラー」を１ターンに１度しか特殊召喚できない。①：この方法でこのカードが特殊召喚した時に発動できる。除外状態の炎族モンスターの数×５００ダメージを相手に与える。その後、デッキから「ヴォルカニック」罠カード１枚を自分フィールドにセットできる。②：相手がモンスターを特殊召喚する度に相手に５００ダメージを与える。
   ko:
   zh-TW:
   zh-CN:
@@ -35,7 +36,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicEmperor-DP28-JP-OP.png
+  image: VolcanicEmperor-DP28-JP-UR.png
 sets:
   ja:
   - set_number: DP28-JP018
@@ -45,7 +46,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 924865
-fake_password:
-- 100299018
