--- a/data/cards/47921178.yaml
+++ b/data/cards/47921178.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18923
+password: 47921178
 name:
   en: Battlin' Boxer Chief Second
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①の効果は１ターンに１度しか使用できない。①：相手モンスターの攻撃宣言時、自分フィールドに戦士族モンスターか炎属性モンスターが存在していれば発動できる。このカードを手札から特殊召喚し、その攻撃を無効にする。その後、フィールドのモンスター１体をエンドフェイズまで除外する。②：このカードがモンスターゾーンに存在する限り、自分は通常召喚に加えて１度だけ、自分メインフェイズに「ＢＫ」モンスター１体を召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -35,7 +36,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerChiefSecond-DP28-JP-OP.png
+  image: BattlinBoxerChiefSecond-DP28-JP-R.png
 sets:
   ja:
   - set_number: DP28-JP033
@@ -44,7 +45,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 903927
-fake_password:
-- 100299033
