--- a/data/cards/52155219.yaml
+++ b/data/cards/52155219.yaml
@@ -47,7 +47,7 @@ text:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。
     ●デッキから「サラマングレイト」モンスター１体を手札に加える。
-    ●自身と同名のモンスターを素材としてリンク召喚した自分フィールドの「サラマングレイト」リンクモンスター１体を対象として発動できる。このターン、そのリンクモンスターは自身以外のモンスターの効果を受けない。
+    ●自身と同名のモンスターを素材としてＬ召喚した自分フィールドの「サラマングレイト」Ｌモンスター１体を対象として発動できる。このターン、そのＬモンスターは自身以外のモンスターの効果を受けない。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 이하의 효과에서 1개를 선택하고 발동할 수 있다.
     ●덱에서 "샐러맨그레이트" 몬스터 1장을 패에 넣는다.
@@ -55,8 +55,8 @@ text:
   zh-TW:
   zh-CN: |-
     这个卡名的卡1个回合只能发动1张。①：可以从以下效果选择1个进行发动。
-    ●从牌组将1只"转生炎兽"怪兽加入手牌。
-    ●可以用和自身同名的怪兽为素材作连接召唤的自己场上1只"转生炎兽"连接怪兽为对象发动。在这个回合中，这只连接怪兽不受自身以外的怪兽的效果影响。
+    ●从牌组将1只“转生炎兽”怪兽加入手牌。
+    ●可以用和自身同名的怪兽为素材作连接召唤的自己场上1只“转生炎兽”连接怪兽为对象发动。在这个回合中，这只连接怪兽不受自身以外的怪兽的效果影响。
 card_type: Spell
 property: Quick-Play
 series:
@@ -118,6 +118,7 @@ sets:
   - set_number: DP28-JP014
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: SD35-KR023
     set_name: 'Structure Deck: Soulburner'
