--- a/data/cards/57134592.yaml
+++ b/data/cards/57134592.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18912
+password: 57134592
 name:
   en: Salamangreat Raging Phoenix
   de:
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    炎属性の効果モンスター２体以上
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが「転生炎獣レイジング・フェニックス」を素材としてＬ召喚した場合に発動できる。デッキから「サラマングレイト」カード１枚を手札に加える。②：このカードが墓地に存在する状態で、自分フィールドの表側表示の炎属性モンスターが戦闘・効果で破壊された場合、その内の１体を対象として発動できる。このカードを特殊召喚し、このカードの攻撃力を対象のモンスターの攻撃力分アップする。
   ko:
   zh-TW:
   zh-CN:
@@ -40,7 +42,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatRagingPhoenix-DP28-JP-OP.png
+  image: SalamangreatRagingPhoenix-DP28-JP-UR.png
 sets:
   ja:
   - set_number: DP28-JP005
@@ -50,7 +52,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 934312
-fake_password:
-- 100299005
