--- a/data/cards/63014935.yaml
+++ b/data/cards/63014935.yaml
@@ -27,7 +27,7 @@ text:
     Questa carta non può essere Evocata tramite Evocazione Normale o Posizionata. Questa carta può essere Evocata solo tramite Evocazione Speciale dalla tua mano al Terreno del tuo avversario offrendo come Tributo 1 mostro che il tuo avversario controlla. Se Evochi tramite Evocazione Speciale questa carta, non puoi Evocare tramite Evocazione Normale o Posizionare in questo turno. Una volta per turno, puoi mandare 1 altra carta che controlli al Cimitero per infliggere 1000 danni al tuo avversario. Durante la tua End Phase, offri come Tributo 1 altro mostro o subisci 1000 danni.
   pt:
   ja: |-
-    このカードは通常召喚できない。相手フィールド上のモンスター１体をリリースし、手札から相手フィールド上に特殊召喚できる。１ターンに１度、このカード以外の自分フィールド上のカード１枚を墓地へ送る事で、相手ライフに１０００ポイントダメージを与える。また、自分のエンドフェイズ時にこのカード以外の自分フィールド上のモンスター１体をリリースするか、自分は１０００ポイントダメージを受ける。このカードを特殊召喚するターン、自分は通常召喚できない。
+    このカードは通常召喚できない。相手フィールドのモンスター１体をリリースした場合に相手フィールドに特殊召喚できる。このカードを特殊召喚するターン、自分は通常召喚できない。①：１ターンに１度、自分フィールドの他のカード１枚を墓地へ送って発動できる。相手に１０００ダメージを与える。②：自分エンドフェイズに発動する。自分フィールドの他のモンスター１体をリリースするか、自分は１０００ダメージを受ける。
   ko: |-
     이 카드는 일반 소환/세트할 수 없다. 상대 필드 위에 존재하는 몬스터 1장을 릴리스하고, 패에서 상대 필드 위에 특수 소환한다. 1턴에 1번, 자신 필드 위에 존재하는 이 카드 이외의 카드 1장을 묘지로 보내는 것으로, 상대 라이프에 1000 포인트 데미지를 준다. 또한, 자신의 엔드 페이즈시에 이 카드 이외의 몬스터 1장을 릴리스하거나, 1000 포인트 데미지를 받는다. 이 카드를 특수 소환하는 턴에 자신은 일반 소환/세트를 할 수 없다.
   zh-TW:
@@ -77,6 +77,7 @@ sets:
   - set_number: DP28-JP028
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: LODT-KR005
     set_name: Light of Destruction
