--- a/data/cards/84138874.yaml
+++ b/data/cards/84138874.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18921
+password: 84138874
 name:
   en: Volcanic Inferno
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：相手がフィールドのモンスターの効果を発動した時、自分の墓地から炎族モンスター１体を除外して発動できる。相手に５００ダメージを与える。「ヴォルカニック」モンスターを除外して発動した場合、さらにその発動した効果を無効にできる。②：相手エンドフェイズに、自分の墓地・除外状態の「ヴォルカニック」モンスターを２体まで対象として発動できる。そのモンスターを好きな順番でデッキの下に戻す。
   ko:
   zh-TW:
   zh-CN:
@@ -31,15 +32,14 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicInferno-DP28-JP-OP.png
+  image: VolcanicInferno-DP28-JP-R.png
 sets:
   ja:
   - set_number: DP28-JP024
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 924874
-fake_password:
-- 100299024
