--- a/data/cards/01295111.yaml
+++ b/data/cards/01295111.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Se você Invocar um Monstro Link "Salamagrande" por Invocação-Link, você pode usar 1 Monstro Link "Salamagrande" que você controla com o mesmo nome, como toda a matéria. Durante o cálculo de dano, se um monstro seu batalhar: você pode pagar 1000 PV e, depois, escolher 1 Monstro Link que você controla; faça com que o ATK dele se torne 0 e, se isso acontecer, ganhe PV igual ao seu ATK original. Você só pode usar cada efeito de "Salamagrande Santuário" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがフィールドゾーンに存在する限り、自分が「サラマングレイト」リンクモンスターをリンク召喚する場合、自分フィールドの同名の「サラマングレイト」リンクモンスター１体のみを素材としてリンク召喚できる。②：自分のモンスターが戦闘を行うダメージ計算時に、１０００ＬＰを払い、自分フィールドのリンクモンスター１体を対象として発動できる。そのモンスターの攻撃力を０にし、そのモンスターの元々の攻撃力分だけ自分のＬＰを回復する。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがフィールドゾーンに存在する限り、自分が「サラマングレイト」ＬモンスターをＬ召喚する場合、自分フィールドの同名の「サラマングレイト」Ｌモンスター１体のみを素材としてＬ召喚できる。②：自分のモンスターが戦闘を行うダメージ計算時に、１０００ＬＰを払い、自分フィールドのＬモンスター１体を対象として発動できる。そのモンスターの攻撃力を０にし、そのモンスターの元々の攻撃力分だけ自分のＬＰを回復する。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 필드 존에 존재하는 한, 자신이 "샐러맨그레이트" 링크 몬스터를 링크 소환할 경우, 자신 필드의 같은 이름의 "샐러맨그레이트" 링크 몬스터 1장만을 소재로서 링크 소환할 수 있다. ②: 자신 몬스터가 전투를 실행하는 데미지 계산시에, 1000 LP를 지불하고, 자신 필드의 링크 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 공격력을 0 으로 하고, 그 몬스터의 원래 공격력만큼만 자신의 LP를 회복한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只能使用1次。①：只要这张卡存在于场地区域，自己要连接召唤"转生炎兽"连接怪兽的情况下，可将自己场上仅1只同名的"转生炎兽"连接怪兽作为素材对其进行连接召唤。②：自己的怪兽进行战斗的伤害计算时，支付1000LP，可以自己场上的1只连接怪兽为对象发动。该怪兽的攻击力改成0，自己的LP恢复该怪兽的原本的攻击力的数值。
+    这个卡名的①②的效果1个回合各只能使用1次。①：只要这张卡存在于场地区域，自己要连接召唤“转生炎兽”连接怪兽的情况下，可将自己场上仅1只同名的“转生炎兽”连接怪兽作为素材对其进行连接召唤。②：自己的怪兽进行战斗的伤害计算时，支付1000LP，可以自己场上的1只连接怪兽为对象发动。该怪兽的攻击力改成0，自己的LP恢复该怪兽的原本的攻击力的数值。
 card_type: Spell
 property: Field
 series:
@@ -142,6 +142,7 @@ sets:
   - set_number: DP28-JP013
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: SOFU-KR051
     set_name: Soul Fusion
