--- a/data/cards/10300821.yaml
+++ b/data/cards/10300821.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18925
+password: 10300821
 name:
   en: "Number C79: Battlin' Boxer Commander Caesar"
   de:
@@ -23,7 +23,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    レベル５モンスター×３
+    ①：このカードの攻撃力はこのカードのＸ素材の数×２００アップする。②：１ターンに１度、相手がモンスターを特殊召喚する際に発動できる。このカードのＸ素材を２つ取り除き、それを無効にし破壊する。③：このカードが「Ｎｏ．７９ ＢＫ 新星のカイザー」をＸ素材としている場合、以下の効果を得る。●１ターンに１度、自分の「ＢＫ」モンスターが相手モンスターと戦闘を行う攻撃宣言時に発動できる。手札・デッキから「ＢＫ」モンスター１体を墓地へ送り、その相手モンスターをこのカードのＸ素材とする。
   ko:
   zh-TW:
   zh-CN:
@@ -42,7 +44,7 @@ series:
 - Number C
 images:
 - index: 1
-  image: NumberC79BattlinBoxerCommanderCaesar-DP28-JP-OP.png
+  image: NumberC79BattlinBoxerCommanderCaesar-DP28-JP-UR.png
 sets:
   ja:
   - set_number: DP28-JP035
@@ -52,7 +54,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 903929
-fake_password:
-- 100299035
