--- a/data/cards/11522479.yaml
+++ b/data/cards/11522479.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18922
+password: 11522479
 name:
   en: Battlin' Boxer Uppercutter
   de:
@@ -24,7 +24,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。「ＢＫ アッパーカッター」以外の「ＢＫ」モンスター１体か「カウンター」カウンター罠カード１枚をデッキから手札に加える。②：このカードが効果で墓地へ送られた場合、以下の効果から１つを選択して発動できる。●自分の墓地から「ＢＫ アッパーカッター」以外の「ＢＫ」モンスター１体を特殊召喚する。●自分の墓地から「カウンター」カウンター罠カード１枚を自分フィールドにセットする。
   ko:
   zh-TW:
   zh-CN:
@@ -38,7 +39,7 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerUppercutter-DP28-JP-OP.png
+  image: BattlinBoxerUppercutter-DP28-JP-R.png
 sets:
   ja:
   - set_number: DP28-JP032
@@ -47,7 +48,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 903926
-fake_password:
-- 100299032
