--- a/data/cards/11962031.yaml
+++ b/data/cards/11962031.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18908
+password: 11962031
 name:
   en: Salamangreat of Fire
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。「サラマングレイト・オブ・ファイア」を除く、レベル４以下の「サラマングレイト」モンスター１体をデッキから手札に加える。この効果の発動後、ターン終了時まで自分は炎属性モンスターしか特殊召喚できない。②：自分のサイバース族モンスターが戦闘を行うダメージステップ開始時に、墓地のこのカードを除外して発動できる。その自分のモンスターを破壊する。
   ko:
   zh-TW:
   zh-CN:
@@ -35,7 +36,7 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatofFire-DP28-JP-OP.png
+  image: SalamangreatofFire-DP28-JP-UR.png
 sets:
   ja:
   - set_number: DP28-JP001
@@ -45,7 +46,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 943090
-fake_password:
-- 100299001
