--- a/data/cards/14812471.yaml
+++ b/data/cards/14812471.yaml
@@ -34,14 +34,14 @@ text:
     Se este card for Invocado por Invocação-Link: você pode adicionar 1 "Salamagrande Santuário" do seu Deck à sua mão. Se um ou mais cards "Salamagrande" que você controla seriam destruídos em batalha ou por um efeito de card, em vez disso, você pode banir este card do seu Cemitério. Você só pode usar cada efeito de "Salamagrande Lincegueira" uma vez por turno.
   ja: |-
     レベル４以下のサイバース族モンスター１体
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがリンク召喚に成功した場合に発動できる。デッキから「転生炎獣の聖域」１枚を手札に加える。②：自分フィールドの「サラマングレイト」カードが戦闘・効果で破壊される場合、代わりに墓地のこのカードを除外できる。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＬ召喚した場合に発動できる。デッキから「転生炎獣の聖域」１枚を手札に加える。②：自分フィールドの「サラマングレイト」カードが戦闘・効果で破壊される場合、代わりに墓地のこのカードを除外できる。
   ko: |-
     레벨 4 이하의 사이버스족 몬스터 1장
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 링크 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "샐러맨그레이트 성역" 1장을 패에 넣는다. ②: 자신 필드의 "샐러맨그레이트" 카드가 전투 / 효과로 파괴될 경우, 대신에 묘지의 이 카드를 제외할 수 있다.
   zh-TW:
   zh-CN: |-
     等级4以下的电子界族怪兽1只
-    这个卡名的①②的效果1个回合各只能使用1次。①：这张卡在连接召唤成功的情况下可以发动。从牌组将1张"转生炎兽之圣域"加入手牌。②：自己场上的"转生炎兽"卡被战斗・效果破坏的情况下，作为代替可将墓地的这张卡除外。
+    这个卡名的①②的效果1个回合各只能使用1次。①：这张卡在连接召唤成功的情况下可以发动。从牌组将1张“转生炎兽之圣域”加入手牌。②：自己场上的“转生炎兽”卡被战斗・效果破坏的情况下，作为代替可将墓地的这张卡除外。
 card_type: Monster
 monster_type_line: Cyberse / Link / Effect
 attribute: FIRE
@@ -90,6 +90,7 @@ sets:
   - set_number: DP28-JP011
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: SD35-KRP02
     set_name: 'Structure Deck: Soulburner Extra Deck Enhancement Pack'
