--- a/data/cards/19027895.yaml
+++ b/data/cards/19027895.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18914
+password: 19027895
 name:
   en: Salamangreat Revive
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地の炎属性モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。②：墓地のこのカードを除外し、自分フィールドの「サラマングレイト」モンスター１体と、自分の墓地の同名モンスター１体を対象として発動できる。その墓地のモンスターをデッキに戻し、その自分フィールドのモンスターの攻撃力はターン終了時まで自身の元々の攻撃力分アップする。
   ko:
   zh-TW:
   zh-CN:
@@ -31,15 +32,14 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatRevive-DP28-JP-OP.png
+  image: SalamangreatRevive-DP28-JP-R.png
 sets:
   ja:
   - set_number: DP28-JP006
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 934347
-fake_password:
-- 100299006
