--- a/data/cards/26889158.yaml
+++ b/data/cards/26889158.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Se um monstro "Salamagrande" for enviado para o seu Cemitério, exceto "Salamagrande Gazela" (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial da sua mão. Se este card for Invocado por Invocação-Normal ou Especial: você pode enviar 1 card "Salamagrande" do seu Deck para o Cemitério, exceto "Salamagrande Gazela". Você só pode usar cada efeito de "Salamagrande Gazela" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：「転生炎獣ガゼル」以外の「サラマングレイト」モンスターが自分の墓地へ送られた場合に発動できる。このカードを手札から特殊召喚する。②：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから「転生炎獣ガゼル」以外の「サラマングレイト」カード１枚を墓地へ送る。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：「転生炎獣ガゼル」以外の「サラマングレイト」モンスターが自分の墓地へ送られた場合に発動できる。このカードを手札から特殊召喚する。②：このカードが召喚・特殊召喚した場合に発動できる。デッキから「転生炎獣ガゼル」以外の「サラマングレイト」カード１枚を墓地へ送る。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: "샐러맨그레이트 가젤" 이외의 "샐러맨그레이트" 몬스터가 자신 묘지로 보내졌을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "샐러맨그레이트 가젤" 이외의 "샐러맨그레이트" 카드 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只能使用1次。①："转生炎兽 羚羊"以外的"转生炎兽"怪兽被送至自己墓地的情况下可以发动。将这张卡从手牌进行特殊召唤。②：这张卡在召唤・特殊召唤成功的情况下可以发动。从牌组将"转生炎兽 羚羊"以外的1张"转生炎兽"卡送至墓地。
+    这个卡名的①②的效果1个回合各只能使用1次。①：“转生炎兽 羚羊”以外的“转生炎兽”怪兽被送至自己墓地的情况下可以发动。将这张卡从手牌进行特殊召唤。②：这张卡在召唤・特殊召唤成功的情况下可以发动。从牌组将“转生炎兽 羚羊”以外的1张“转生炎兽”卡送至墓地。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
@@ -98,6 +98,7 @@ sets:
   - set_number: DP28-JP008
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: SD35-KR003
     set_name: 'Structure Deck: Soulburner'
