--- a/data/cards/33365932.yaml
+++ b/data/cards/33365932.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 묘지에 존재할 경우, 1턴에 1번, 500 LP를 지불하고 발동할 수 있다. 이 카드가 묘지에 존재할 경우, 덱에서 "볼캐닉 불릿" 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡存在于墓地的情况下，1个回合1次，支付500LP可以发动。这张卡存在于墓地的情况下，从牌组把1只"火山性子弹"加入手牌。
+    ①：这张卡存在于墓地的情况下，1个回合1次，支付500LP可以发动。这张卡存在于墓地的情况下，从牌组把1只“火山性子弹”加入手牌。
 card_type: Monster
 monster_type_line: Pyro / Effect
 attribute: FIRE
@@ -170,6 +170,7 @@ sets:
   - set_number: DP28-JP025
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: FOTB-KR009
     set_name: Force of the Breaker
