--- a/data/cards/36916401.yaml
+++ b/data/cards/36916401.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Envie o card do topo do seu Deck para o Cemitério e, depois, escolha 1 monstro "Boxeador Obstinado" no seu Cemitério; Invoque o alvo por Invocação-Especial com a face para cima em Posição de Defesa. Você só pode ativar 1 "Espíritos Boxeadores Obstinados" por turno.
   ja: |-
-    デッキの一番上のカードを墓地へ送って発動できる。自分の墓地の「ＢＫ」と名のついたモンスター１体を選択して表側守備表示で特殊召喚する。「バーニングナックル・スピリッツ」は１ターンに１枚しか発動できない。
+    このカード名のカードは１ターンに１枚しか発動できない。①：デッキの一番上のカードを墓地へ送り、自分の墓地の「ＢＫ」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
   ko: |-
     덱의 맨 위의 카드를 묘지로 보내고 발동할 수 있다. 자신 묘지의 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터 1장을 선택하고 앞면 수비 표시로 특수 소환한다. "버닝나클 스피릿"은 1턴에 1장밖에 발동할 수 없다.
   zh-TW:
@@ -94,6 +94,7 @@ sets:
   - set_number: DP28-JP045
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: SHSP-KR060
     set_name: Shadow Specters
