--- a/data/cards/46804536.yaml
+++ b/data/cards/46804536.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18926
+password: 46804536
 name:
   en: Battlin' Boxer King Dempsey
   de:
@@ -22,7 +22,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    レベル４モンスター×２
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚した場合に発動できる。デッキからレベル４以下の戦士族・炎属性モンスター１体または「バーニングナックル」魔法・罠カード１枚を選び、手札に加えるか墓地へ送る。②：自分・相手ターンに発動できる。自分フィールドのＸ素材を１つ取り除き、以下の効果を適用する。●このターン中は自分フィールドの「ＢＫ」モンスターを相手は効果の対象にできない。
   ko:
   zh-TW:
   zh-CN:
@@ -37,15 +39,15 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerKingDempsey-DP28-JP-OP.png
+  image: BattlinBoxerKingDempsey-DP28-JP-SR.png
 sets:
   ja:
   - set_number: DP28-JP036
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 903930
-fake_password:
-- 100299036
