--- a/data/cards/54529134.yaml
+++ b/data/cards/54529134.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Escolha 1 Monstro Link "Salamagrande" que você controla; Invoque por Invocação-Especial 1 Monstro Link "Salamagrande" com o mesmo nome do seu Deck Adicional, usando esse monstro que você controla como toda a matéria. (Isso é considerado como uma Invocação-Link.) Você só pode ativar 1 "Transcendência Salamagrande" por turno.
   ja: |-
-    このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「サラマングレイト」リンクモンスター１体を対象として発動できる。その自分のモンスター１体のみを素材として同名の「サラマングレイト」リンクモンスター１体をリンク召喚扱いとしてＥＸデッキから特殊召喚する。
+    このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「サラマングレイト」Ｌモンスター１体を対象として発動できる。その自分のモンスター１体のみを素材として同名の「サラマングレイト」Ｌモンスター１体をＬ召喚扱いでＥＸデッキから特殊召喚する。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 "샐러맨그레이트" 링크 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 자신 몬스터 1장만을 소재로서 같은 이름의 "샐러맨그레이트" 링크 몬스터 1장을 링크 소환으로 취급하고 엑스트라 덱에서 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：以自己场上的1只"转生炎兽"连接怪兽为对象可以发动。仅以自己的该1只怪兽作为素材，将同名的1只"转生炎兽"连接怪兽视为连接召唤从额外牌组特殊召唤。
+    此卡名的卡1回合仅可发动1张。①：以自己场上的1只“转生炎兽”连接怪兽为对象可以发动。仅以自己的该1只怪兽作为素材，将同名的1只“转生炎兽”连接怪兽视为连接召唤从额外牌组特殊召唤。
 card_type: Spell
 property: Quick-Play
 series:
