--- a/data/cards/57357130.yaml
+++ b/data/cards/57357130.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18909
+password: 57357130
 name:
   en: Salamangreat Wheesel
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地の「サラマングレイト」モンスターが２体以上の場合に発動できる。このカードを手札から特殊召喚する。②：このカードが墓地に存在する状態で、自分フィールドに「サラマングレイト」儀式・融合・Ｓ・Ｘ・Ｌモンスターが特殊召喚された場合、このカード以外の自分の墓地の「サラマングレイト」モンスター１体を対象として発動できる。このカードをデッキの一番下に戻し、対象のモンスターを相手フィールドに特殊召喚する。その後、自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
@@ -35,15 +36,15 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatWheesel-DP28-JP-OP.png
+  image: SalamangreatWheesel-DP28-JP-SR.png
 sets:
   ja:
   - set_number: DP28-JP002
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 934343
-fake_password:
-- 100299002
