--- a/data/cards/58143766.yaml
+++ b/data/cards/58143766.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18920
+password: 58143766
 name:
   en: Volcanic Emission
   de:
@@ -24,7 +24,10 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：以下の効果から１つを選択して発動できる（このカード名の以下の効果はそれぞれ１ターンに１度しか選択できない）。
+    ●デッキから「ヴォルカニック」モンスター１体を選び、手札に加えるか召喚条件を無視して特殊召喚する。この効果で特殊召喚したモンスターはエンドフェイズに手札に戻る。
+    ●フィールドの炎族モンスター１体を対象として発動できる。そのモンスターの元々の攻撃力分のダメージを相手に与える。自分フィールドのモンスターを対象として発動した場合、この効果で与えるダメージは半分になる。
   ko:
   zh-TW:
   zh-CN:
@@ -34,15 +37,15 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicEmission-DP28-JP-OP.png
+  image: VolcanicEmission-DP28-JP-SR.png
 sets:
   ja:
   - set_number: DP28-JP023
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 936592
-fake_password:
-- 100299023
