--- a/data/cards/59627393.yaml
+++ b/data/cards/59627393.yaml
@@ -34,7 +34,7 @@ text:
     Durante a Fase de Batalha de qualquer duelista, se um monstro "Boxeador Obstinado" que você controla batalhar um monstro do oponente: você pode desassociar 1 Matéria Xyz deste card; negue os efeitos do monstro do oponente até o final do turno, esse monstro que você controla não pode ser destruído nessa batalha e, além disso, seu oponente sofre todo o dano de batalha que você teria sofrido nessa batalha.
   ja: |-
     レベル４モンスター×３
-    ①：自分の「ＢＫ」モンスターが相手モンスターと戦闘を行うバトルステップに、このカードのＸ素材を１つ取り除いて発動できる。ターン終了時までその相手モンスターの効果は表側表示の間だけ無効化され、その自分のモンスターはその戦闘では破壊されず、その戦闘で発生する自分への戦闘ダメージは代わりに相手が受ける。この効果は相手ターンでも発動できる。
+    ①：自分の「ＢＫ」モンスターが相手モンスターと戦闘を行う自分・相手のバトルステップに、このカードのＸ素材を１つ取り除いて発動できる（同一チェーン上では１度まで）。ターン終了時までその相手モンスターの効果は表側表示の間だけ無効化され、その自分のモンスターはその戦闘では破壊されず、その戦闘で発生する自分への戦闘ダメージは代わりに相手が受ける。
   ko: |-
     레벨 4 몬스터 × 3
     자신 필드 위의 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터가 상대 몬스터와 전투를 실행하는 배틀 스텝시에 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 그 상대 몬스터의 효과는 턴 종료시까지 무효화되고, 그 자신의 몬스터는 그 전투로는 파괴되지 않으며, 그 전투에 의해서 발생하는 자신에게로의 전투 데미지는 대신에 상대가 받는다. 이 효과는 상대 턴에도 발동할 수 있다.
