--- a/data/cards/59805313.yaml
+++ b/data/cards/59805313.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18917
+password: 59805313
 name:
   en: Volcanic Rimfire
   de:
@@ -24,7 +24,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ①：このカードが墓地へ送られた場合、以下の効果から１つを選択して発動できる（このカード名の以下の効果はそれぞれ１ターンに１度しか選択できない）。●墓地のこのカードを除外し、デッキから「ヴォルカニック・リムファイア」以外の「ヴォルカニック」モンスター１体を墓地へ送る。●自分のフィールド（表側表示）・墓地から「ブレイズ・キャノン」カード１枚を除外し、手札・デッキから「ブレイズ・キャノン」永続魔法・永続罠カード１枚を自分フィールドに表側表示で置く。
   ko:
   zh-TW:
   zh-CN:
@@ -38,7 +39,7 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicRimfire-DP28-JP-OP.png
+  image: VolcanicRimfire-DP28-JP-R.png
 sets:
   ja:
   - set_number: DP28-JP020
@@ -47,7 +48,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 924869
-fake_password:
-- 100299020
