--- a/data/cards/68144350.yaml
+++ b/data/cards/68144350.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for Invocado por Invocação-Normal: você pode escolher 1 monstro "Boxeador Obstinado" em seu Cemitério; Invoque o alvo por Invocação-Especial. Você não pode Invocar quaisquer monstros por Invocação-Especial durante o turno em que ativar este efeito, exceto por monstros "Boxeador Obstinado".
   ja: |-
-    このカードが召喚に成功した時、自分の墓地の「ＢＫ」と名のついたモンスター１体を選択して特殊召喚できる。この効果を発動するターン、自分は「ＢＫ」と名のついたモンスター以外のモンスターを特殊召喚できない。
+    このカードの効果を発動するターン、自分は「ＢＫ」モンスターしか特殊召喚できない。①：このカードが召喚した時、自分の墓地の「ＢＫ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
     이 카드가 일반 소환에 성공했을 때, 자신 묘지의 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터 1장을 선택하고 특수 소환할 수 있다. 이 효과를 발동하는 턴에, 자신은 "BK(버닝나쿠라)"라는 이름이 붙은 몬스터 이외의 몬스터를 특수 소환할 수 없다.
   zh-TW: |-
@@ -99,6 +99,7 @@ sets:
   - set_number: DP28-JP041
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: LTGY-KR019
     set_name: Lord of the Tachyon Galaxy
