--- a/data/cards/69537999.yaml
+++ b/data/cards/69537999.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode escolher 1 monstro que seu oponente controla; envie 1 monstro Piro com 500 ou menos de ATK da sua mão para o Cemitério e, se isso acontecer, destrua o alvo. Seus monstros não podem atacar no turno em que você ativar este efeito.
   ja: |-
-    自分のメインフェイズ時に相手フィールド上のモンスター１体を選択して発動できる。手札から攻撃力５００以下の炎族モンスター１体を墓地へ送り、選択した相手モンスターを破壊する。この効果を発動するターン、自分のモンスターは攻撃できない。
+    ①：相手フィールドのモンスター１体を対象としてこの効果を発動できる（この効果を発動するターン、自分のモンスターは攻撃できない）。手札から攻撃力５００以下の炎族モンスター１体を墓地へ送り、対象の相手モンスターを破壊する。
   ko: |-
     자신의 메인 페이즈시에 상대 필드 위의 몬스터 1장을 선택하고 발동할 수 있다. 패에서 공격력 500 이하의 화염족 몬스터 1장을 묘지로 보내고, 선택한 상대 몬스터를 파괴한다. 이 효과를 발동하는 턴에, 자신의 몬스터는 공격할 수 없다.
   zh-TW: |-
@@ -135,6 +135,7 @@ sets:
   - set_number: DP28-JP030
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: FOTB-KR040
     set_name: Force of the Breaker
