--- a/data/cards/69750546.yaml
+++ b/data/cards/69750546.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando esta carta é enviada ao Cemitério, inflige 500 pontos de dano ao seu oponente. Se esta carta é enviada ao Cemitério pelo efeito de alguma carta com "Blaze Accelerator" no nome, você pode enviar 2 "Volcanic Scattershot" da sua mão ou Deck ao Cemitério para destruir todos os monstros do seu oponente.
   ja: |-
-    このカードが墓地へ送られた時、相手ライフに５００ポイントダメージを与える。このカードが「ブレイズ・キャノン」と名のついたカードの効果によって墓地へ送られた場合、手札・デッキから「ヴォルカニック・バックショット」２体を墓地へ送る事で、相手フィールド上のモンスターを全て破壊する。
+    ①：このカードが墓地へ送られた場合に発動する。相手に５００ダメージを与える。②：このカードが「ブレイズ・キャノン」カードの効果で墓地へ送られた場合、手札・デッキから「ヴォルカニック・バックショット」２体を墓地へ送って発動できる。相手フィールドのモンスターを全て破壊する。
   ko: |-
     이 카드가 묘지로 보내졌을 때, 상대 라이프에 500 포인트 데미지를 준다. 이 카드가 "브레이즈 캐논"이라는 이름이 붙은 카드의 효과에 의해서 묘지로 보내졌을 경우, 패 / 덱에서 "볼캐닉 백샷" 2장을 묘지로 보내는 것으로, 상대 필드 위의 몬스터를 전부 파괴한다.
   zh-TW:
@@ -98,6 +98,7 @@ sets:
   - set_number: DP28-JP026
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: FOTB-KR010
     set_name: Force of the Breaker
