--- a/data/cards/76459806.yaml
+++ b/data/cards/76459806.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for Invocado: você pode adicionar 1 card "Acelerador de Explosão" do seu Deck ou Cemitério à sua mão.
   ja: |-
-    このカードが召喚・反転召喚・特殊召喚に成功した時、自分のデッキ・墓地から「ブレイズ・キャノン」と名のついたカード１枚を選んで手札に加える事ができる。
+    ①：このカードが召喚・反転召喚・特殊召喚した時に発動できる。自分のデッキ・墓地から「ブレイズ・キャノン」カード１枚を手札に加える。
   ko: |-
     이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 때, 자신의 덱 / 묘지에서 "브레이즈 캐논"이라는 이름이 붙은 카드 1장을 고르고 패에 넣을 수 있다.
   zh-TW: |-
@@ -169,6 +169,7 @@ sets:
   - set_number: DP28-JP027
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Common
   ko:
   - set_number: ESP2-KR064
     set_name: Expansion Pack Vol.2
