--- a/data/cards/83315222.yaml
+++ b/data/cards/83315222.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18924
+password: 83315222
 name:
   en: Battlin' Boxer Promoter
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できず、この効果を発動するターン、自分は「ＢＫ」モンスターしか特殊召喚できない。①：相手フィールドにモンスターが存在する場合に発動できる。このカードを手札から特殊召喚する。②：このカードをリリースして発動できる。デッキから「ＢＫ プロモーター」以外の「ＢＫ」モンスターを２体まで特殊召喚する（同名カードは１枚まで）。③：墓地のこのカードを除外して発動できる。自分フィールドの「ＢＫ」モンスターのレベルを全て１つ上げるか全て１つ下げる。
   ko:
   zh-TW:
   zh-CN:
@@ -35,15 +36,15 @@ series:
 - Battlin' Boxer
 images:
 - index: 1
-  image: BattlinBoxerPromoter-DP28-JP-OP.png
+  image: BattlinBoxerPromoter-DP28-JP-SR.png
 sets:
   ja:
   - set_number: DP28-JP034
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 903928
-fake_password:
-- 100299034
