--- a/data/cards/83533296.yaml
+++ b/data/cards/83533296.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18913
+password: 83533296
 name:
   en: Salamangreat Charge
   de:
@@ -24,7 +24,10 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。
+    ●自分の墓地・除外状態の炎属性モンスター３体を対象として発動できる。その３体の内の２体をデッキに戻し、残りの１体を特殊召喚する。この効果で特殊召喚したモンスターはこのターン、効果が無効化され、攻撃できない。
+    ●元々の攻撃力と異なる攻撃力を持つ、炎属性の儀式・融合・Ｓ・Ｘ・Ｌモンスターが自分フィールドに存在する場合、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
   ko:
   zh-TW:
   zh-CN:
@@ -34,15 +37,14 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatCharge-DP28-JP-OP.png
+  image: SalamangreatCharge-DP28-JP-R.png
 sets:
   ja:
   - set_number: DP28-JP006
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 934346
-fake_password:
-- 100299006
