--- a/data/cards/85250352.yaml
+++ b/data/cards/85250352.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18918
+password: 85250352
 name:
   en: Volcanic Blaze Accelerator
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札・デッキ・フィールド（表側表示）から「ブレイズ・キャノン」１枚を墓地へ送ってこのカードを発動できる。①：「ヴォルカニック・ブレイズ・キャノン」は自分フィールドに１枚しか表側表示で存在できない。②：１ターンに１度、自分メインフェイズに発動できる。手札から「ヴォルカニック」モンスター１体を特殊召喚する。③：１ターンに１度、相手フィールドの表側表示モンスター１体を対象として発動できる。デッキから炎族・レベル１モンスター１体を墓地へ送り、対象のモンスターを破壊する。
   ko:
   zh-TW:
   zh-CN:
@@ -32,15 +33,15 @@ series:
 - Volcanic
 images:
 - index: 1
-  image: VolcanicBlazeAccelerator-DP28-JP-OP.png
+  image: VolcanicBlazeAccelerator-DP28-JP-SR.png
 sets:
   ja:
   - set_number: DP28-JP021
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 924871
-fake_password:
-- 100299021
