--- a/data/cards/87327776.yaml
+++ b/data/cards/87327776.yaml
@@ -34,14 +34,14 @@ text:
     Você pode desassociar 1 matéria deste card; Invoque por Invocação-Especial 1 monstro "Salamagrande" do seu Deck em Posição de Defesa e, além disso, você não pode ativar efeitos de monstro pelo resto deste turno, exceto monstros de FOGO. Se este card Invocado por Invocação-Xyz for enviado para o Cemitério como matéria para a Invocação-Link de um monstro "Salamagrande": você pode escolher 1 monstro no campo; devolva-o para a mão. Você só pode usar cada efeito de "Salamagrande Migaranhão" uma vez por turno.
   ja: |-
     レベル３モンスター×２
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのＸ素材を１つ取り除いて発動できる。デッキから「サラマングレイト」モンスター１体を守備表示で特殊召喚する。この効果の発動後、ターン終了時まで自分は炎属性以外のモンスターの効果を発動できない。②：Ｘ召喚したこのカードが「サラマングレイト」リンクモンスターのリンク素材として墓地へ送られた場合、フィールドのモンスター１体を対象として発動できる。そのモンスターを持ち主の手札に戻す。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのＸ素材を１つ取り除いて発動できる。デッキから「サラマングレイト」モンスター１体を守備表示で特殊召喚する。この効果の発動後、ターン終了時まで自分は炎属性以外のモンスターの効果を発動できない。②：Ｘ召喚したこのカードが「サラマングレイト」ＬモンスターのＬ素材として墓地へ送られた場合、フィールドのモンスター１体を対象として発動できる。そのモンスターを手札に戻す。
   ko: |-
     레벨 3 몬스터 × 2
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 덱에서 "샐러맨그레이트" 몬스터 1장을 수비 표시로 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 화염 속성 이외의 몬스터 효과를 발동할 수 없다. ②: 엑시즈 소환한 이 카드가 "샐러맨그레이트" 링크 몬스터의 링크 소재로서 묘지로 보내졌을 경우, 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다.
   zh-TW:
   zh-CN: |-
     等级3怪兽×2
-    此卡名的①②效果1回合仅可各使用1次。①：去除此卡的1个超量素材可以发动。从牌组将1只"转生炎兽"怪兽以守备表示形式特殊召唤。此效果发动后，直到回合结束时为止自己不可发动炎属性以外的怪兽的效果。②：超量召唤的此卡作为"转生炎兽"连接怪兽的连接素材被送至墓地的情况下，可以场上1只怪兽为对象发动。将该怪兽放回持有者的手牌中。
+    此卡名的①②效果1回合仅可各使用1次。①：去除此卡的1个超量素材可以发动。从牌组将1只“转生炎兽”怪兽以守备表示形式特殊召唤。此效果发动后，直到回合结束时为止自己不可发动炎属性以外的怪兽的效果。②：超量召唤的此卡作为“转生炎兽”连接怪兽的连接素材被送至墓地的情况下，可以场上1只怪兽为对象发动。将该怪兽放回持有者的手牌中。
 card_type: Monster
 monster_type_line: Cyberse / Xyz / Effect
 attribute: FIRE
