--- a/data/cards/18511599.yaml
+++ b/data/cards/18511599.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN: 进化帝·索德斯龙
 text:
   en: |-
-    2 Level 6 Dinosaur-Type monsters
-    This card cannot be destroyed by card effects while it has Xyz Material. When your opponent Special Summons a monster(s): You can detach 1 Xyz Material from this card; destroy that monster(s).
+    2 Level 6 Dinosaur monsters
+    Cannot be destroyed by card effects while it has material. When your opponent Special Summons a monster(s) (except during the Damage Step): You can detach 1 material from this card; destroy that monster(s).
   de: |-
     2 Monster vom Typ Dinosaurier der Stufe 6
     Diese Karte kann nicht durch Karteneffekte zerstört werden, solange sie Xyz-Material hat. Wenn dein Gegner Monster als Spezialbeschwörung beschwört: Du kannst 1 Xyz-Material von dieser Karte abhängen; zerstöre die Monster.
@@ -52,7 +52,7 @@ series:
 - Evolzar
 images:
 - index: 1
-  image: EvolzarSolda-ORCS-EN-UR-1E.png
+  image: EvolzarSolda-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: ORCS-EN045
