--- a/data/cards/57103969.yaml
+++ b/data/cards/57103969.yaml
@@ -40,7 +40,7 @@ series:
 - Fire Formation
 images:
 - index: 1
-  image: FireFormationTenki-MGED-EN-PGR-1E.png
+  image: FireFormationTenki-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: CBLZ-EN059
@@ -311,7 +311,7 @@ sets:
     - Secret Rare
     - Collector's Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Semi-Limited
   speed: Unlimited
 yugipedia_page_id: 230764
