--- a/data/cards/80280944.yaml
+++ b/data/cards/80280944.yaml
@@ -41,7 +41,7 @@ atk: 2000
 def: 1200
 images:
 - index: 1
-  image: GiantRex-MGED-EN-R-1E.png
+  image: GiantRex-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: BLLR-EN027
