--- a/data/cards/00653675.yaml
+++ b/data/cards/00653675.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target any number of Level 7 and/or 8 Dragon Synchro Monsters in your GY; Special Summon them in Defense Position, but their Levels become 1, their effects are negated, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Synchro Monsters. When your Synchro Monster is destroyed by battle: You can banish this card from your GY; Special Summon 1 "The Crimson Dragon" from your Extra Deck. You can only use each effect of "Synchro Over Top" once per turn.
+    Target any number of Level 7 and/or 8 Dragon Synchro Monsters in your GY; Special Summon them in Defense Position, but their Levels become 1, their effects are negated, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Synchro Monsters. When your Synchro Monster is destroyed by battle: You can banish this card from your GY; Special Summon 1 "Crimson Dragon" from your Extra Deck. You can only use each effect of "Synchro Over Top" once per turn.
   de:
   es:
   fr:
