--- a/data/cards/24207889.yaml
+++ b/data/cards/24207889.yaml
@@ -37,7 +37,7 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
-  image: ThereCanBeOnlyOne-SDAZ-EN-C-1E.png
+  image: ThereCanBeOnlyOne-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: EXFO-EN076
@@ -60,6 +60,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: EXFO-DE076
     set_name: Extreme Force
@@ -81,6 +82,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: EXFO-FR076
     set_name: Extreme Force
@@ -102,6 +104,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: EXFO-IT076
     set_name: Extreme Force
@@ -123,6 +126,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: EXFO-PT076
     set_name: Extreme Force
@@ -144,6 +148,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: EXFO-JP076
     set_name: Extreme Force
