--- a/data/cards/47325505.yaml
+++ b/data/cards/47325505.yaml
@@ -39,7 +39,7 @@ series:
 - Fossil
 images:
 - index: 1
-  image: FossilDig-BROL-EN-UR-1E.png
+  image: FossilDig-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: ANPR-EN062
@@ -74,6 +74,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: ANPR-DE062
     set_name: Ancient Prophecy
@@ -107,6 +108,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: ANPR-FR062
     set_name: Ancient Prophecy
@@ -140,6 +142,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: ANPR-IT062
     set_name: Ancient Prophecy
@@ -173,6 +176,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: LCJW-PT164
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -198,6 +202,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: ANPR-JP062
     set_name: Ancient Prophecy
