--- a/data/cards/82946847.yaml
+++ b/data/cards/82946847.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 小翼龙
 text:
   en: |-
-    If this card is destroyed by a card effect and sent to the Graveyard: Special Summon 1 Level 4 or higher Dinosaur-Type monster from your Deck, but it cannot attack this turn.
+    If this card is destroyed by card effect and sent to the GY: Special Summon 1 Level 4 or higher Dinosaur monster from your Deck, but it cannot attack this turn.
   de: |-
     Falls diese Karte durch einen Karteneffekt zerstört und auf den Friedhof gelegt wird: Beschwöre 1 Monster vom Typ Dinosaurier der Stufe 4 oder höher als Spezialbeschwörung von deinem Deck, aber es kann in diesem Spielzug nicht angreifen.
   es: |-
@@ -41,7 +41,7 @@ atk: 500
 def: 500
 images:
 - index: 1
-  image: Petiteranodon-SR04-EN-UR-1E.png
+  image: Petiteranodon-WISU-EN-R-1E.png
 sets:
   en:
   - set_number: SR04-EN000
