--- a/data/rush/17593.yaml
+++ b/data/rush/17593.yaml
@@ -35,6 +35,8 @@ def: 0
 images:
 - index: 1
   image: Tamabot-RDSD02-JP-C.png
+- index: 2
+  image: Tamabot-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/GRD2-JP023
