--- a/data/rush/18894.yaml
+++ b/data/rush/18894.yaml
@@ -33,7 +33,7 @@ atk: 0
 def: 0
 images:
 - index: 1
-  image: Soitsu-RDB231-JP-OP.png
+  image: Soitsu-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/B231-JP008
