--- a/rush.yaml
+++ b/rush.yaml
@@ -55445,7 +55445,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 300 ATK until the end of this turn. Also, if your opponent has no cards in their hand, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
+    This card gains 300 ATK until the end of this turn. Then, if your opponent has no cards in their hand, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
   de:
   es:
   fr:
@@ -66717,7 +66717,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Omega Psychic or Psychic Type monster on your field gains 1200 ATK until the end of this turn. Also, if that monster's Level is 9, it cannot be destroyed by battle or your opponent's card effects this turn.
+    1 face-up Omega Psychic or Psychic Type monster on your field gains 1200 ATK until the end of this turn. Then, if that monster's Level is 9, it cannot be destroyed by battle or your opponent's card effects this turn.
   de:
   es:
   fr:
@@ -76233,7 +76233,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 face-up monster on your opponent's field to face-down Defense Position. This card gains 500 ATK until the end of this turn. Also, if you sent a monster to the Graveyard to meet the requirement, this card cannot be destroyed by your opponent's Trap Card effects this turn.
+    Change 1 face-up monster on your opponent's field to face-down Defense Position. This card gains 500 ATK until the end of this turn. Then, if you sent a monster to the Graveyard to meet the requirement, this card cannot be destroyed by your opponent's Trap Card effects this turn.
   de:
   es:
   fr:
@@ -79547,7 +79547,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card cannot be destroyed by your opponent's Trap Card effects. Also, if you sent a Plant Type monster to the Graveyard to meet the requirement, this card gains 700 ATK until the end of this turn.
+    This turn, this card cannot be destroyed by your opponent's Trap Card effects. Then, if you sent a Plant Type monster to the Graveyard to meet the requirement, this card gains 700 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -79675,7 +79675,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Plant Type monster on your field can attack directly this turn. Also, you can Set 1 "Shadow Flower Stance" from your Graveyard in your Spell & Trap Zone.
+    1 face-up Plant Type monster on your field can attack directly this turn. Then, you can Set 1 "Shadow Flower Stance" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
@@ -82089,7 +82089,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, it cannot be destroyed by your opponent's Spell Card effects.
+    This card cannot be destroyed by your opponent's Trap Card effects. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's Spell Card effects.
   de:
   es:
   fr:
@@ -83419,7 +83419,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Level 5 or higher Machine Type monster on your field. This turn, that monster cannot be destroyed by your opponent's Trap Card effects. Also, if that monster is LIGHT Attribute, draw 1 card.
+    Choose 1 face-up Level 5 or higher Machine Type monster on your field. This turn, that monster cannot be destroyed by your opponent's Trap Card effects. Then, if that monster is LIGHT Attribute, draw 1 card.
   de:
   es:
   fr:
@@ -85075,7 +85075,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Also, you can Set 1 "Dark Revelation" from your Graveyard in your Spell & Trap Zone.
+    1 face-up monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Then, you can Set 1 "Dark Revelation" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
@@ -88200,7 +88200,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Also, if you sent a Normal Monster to the Graveyard to meet the requirement, this face-up card can be treated as 2 Tributes for the Tribute Summon of a monster with 200 DEF in Attack Position this turn.
+    Draw 1 card. Then, if you sent a Normal Monster to the Graveyard to meet the requirement, this face-up card can be treated as 2 Tributes for the Tribute Summon of a monster with 200 DEF in Attack Position this turn.
   de:
   es:
   fr:
@@ -92952,7 +92952,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. If at least 1 of the results is heads, this card can attack twice this turn. Also, if 3 of the results are heads, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
+    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. If at least 1 of the results is heads, this card can attack twice this turn. Then, if 3 of the results are heads, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
   de:
   es:
   fr:
@@ -94427,7 +94427,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 600 ATK until the end of this turn. Also, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
+    This card gains 600 ATK until the end of this turn. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
   de:
   es:
   fr:
@@ -94872,7 +94872,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the battle position of 1 monster on your opponent's field. Also, if this card is in Maximum Mode, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
+    Change the battle position of 1 monster on your opponent's field. Then, if this card is in Maximum Mode, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
   de:
   es:
   fr:
@@ -95118,7 +95118,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Also, you can add 1 Level 10 Maximum Monster, "Supreme Electromagnetic Maximum", or "B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
+    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Then, you can add 1 Level 10 Maximum Monster, "Supreme Electromagnetic Maximum", or "B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -96075,7 +96075,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn, and you gain 1000 LP. Also, if that monster is a Maximum Monster, it cannot be destroyed by battle or your opponent's card effects this turn.
+    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn, and you gain 1000 LP. Then, if that monster is a Maximum Monster, it cannot be destroyed by battle or your opponent's card effects this turn.
   de:
   es:
   fr:
@@ -96129,7 +96129,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The attack target cannot be destroyed by that battle. Also, if the attack target is in Maximum Mode, you gain 1000 LP.
+    The attack target cannot be destroyed by that battle. Then, if the attack target is in Maximum Mode, you gain 1000 LP.
   de:
   es:
   fr:
@@ -96183,7 +96183,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn. Also, if that monster is a Maximum Monster, it cannot be destroyed by your opponent's card effects this turn.
+    1 face-up Sea Serpent Type monster on your field gains 1000 ATK until the end of this turn. Then, if that monster is a Maximum Monster, it cannot be destroyed by your opponent's card effects this turn.
   de:
   es:
   fr:
@@ -97029,7 +97029,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. If a DARK Attribute Galaxy Type monster(s) is among the cards sent, this card can attack up to that many times this turn. Also, if the cards sent are 3 DARK Attribute Galaxy Type monsters with the same Level, you can destroy all face-up Level 8 or lower monsters on your opponent's field.
+    Send the top 3 cards of your Deck to the Graveyard. If a DARK Attribute Galaxy Type monster(s) is among the cards sent, this card can attack up to that many times this turn. Then, if the cards sent are 3 DARK Attribute Galaxy Type monsters with the same Level, you can destroy all face-up Level 8 or lower monsters on your opponent's field.
   de:
   es:
   fr:
@@ -98357,7 +98357,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card can attack twice. Also, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. Then, if you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
+    This turn, this card can attack twice. Then, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. Then, if you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -99026,7 +99026,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Spell/Trap Card on either field. Also, this turn, this card gains 500 ATK and can attack twice.
+    Destroy 1 Spell/Trap Card on either field. Then, this turn, this card gains 500 ATK and can attack twice.
   de:
   es:
   fr:
@@ -102185,3 +102185,186 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 958752
+---
+konami_id:
+name:
+  en: Harpie Lady 1
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Harpie Lady" while in the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card's name becomes "Harpie Lady", and face-up WIND Attribute monsters on the field gain 300 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Effect
+attribute: WIND
+level: 4
+atk: 1300
+def: 1400
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpieLady1-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP004
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 972991
+---
+konami_id:
+name:
+  en: Harpie's Pet Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card gains ATK equal to [the number of face-up "Harpie Lady" on the field] x 300 and [the number of face-up "Harpie Ladies" on the field] x 900.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: WIND
+level: 7
+atk: 2000
+def: 2500
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpiesPetDragon-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP010
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 972992
+---
+konami_id:
+name:
+  en: Elegant Egotist
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have "Harpie Lady" or "Harpie Ladies" face-up on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon up to 2 "Harpie Lady" and/or "Harpie Ladies" from your Graveyard face-up to your field. This turn, you cannot declare an attack on Attack Position monsters with 1200 or less ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Harpie
+images:
+- index: 1
+  image: ElegantEgotist-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP014
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 972993
